[gd_scene load_steps=7 format=3 uid="uid://bwhfo7bbtwepf"]

[ext_resource type="Script" path="res://src/shop.gd" id="1_l7lj2"]
[ext_resource type="Texture2D" uid="uid://cryylulirjn2d" path="res://assets/popup_background.png" id="2_26m0e"]
[ext_resource type="Texture2D" uid="uid://cj0avjaofdsd1" path="res://assets/close_btn_normal.png" id="3_xo1lm"]
[ext_resource type="Texture2D" uid="uid://bbr1ydo557c7a" path="res://assets/close_btn_pressed.png" id="4_gowwn"]
[ext_resource type="Texture2D" uid="uid://cux4lrm11ph6c" path="res://assets/inventory_slot.png" id="5_awhrh"]
[ext_resource type="Texture2D" uid="uid://c7gvgr38ao3gv" path="res://assets/sharp_knife.png" id="6_xsb5m"]

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_l7lj2")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 221.0
offset_top = 31.0
offset_right = 1001.0
offset_bottom = 751.0
texture = ExtResource("2_26m0e")

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 648.0
offset_top = 91.0
offset_right = 680.0
offset_bottom = 123.0
texture_normal = ExtResource("3_xo1lm")
texture_pressed = ExtResource("4_gowwn")
texture_hover = ExtResource("4_gowwn")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 99.0
offset_top = 87.0
offset_right = 680.0
offset_bottom = 141.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "마을 상점"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 83.0
offset_top = 120.0
offset_right = 418.0
offset_bottom = 657.0
texture = ExtResource("2_26m0e")
expand_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/TextureRect"]
layout_mode = 0
offset_left = 44.0
offset_top = 63.0
offset_right = 291.0
offset_bottom = 478.0

[node name="BuyContainer" type="VBoxContainer" parent="TextureRect/TextureRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/TextureRect/ScrollContainer/BuyContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TextureRect/TextureRect/ScrollContainer/BuyContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_awhrh")

[node name="TextureRect" type="TextureRect" parent="TextureRect/TextureRect/ScrollContainer/BuyContainer/HBoxContainer/TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_xsb5m")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/TextureRect/ScrollContainer/BuyContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect/TextureRect/ScrollContainer/BuyContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "샤프 나이프"

[node name="Label2" type="Label" parent="TextureRect/TextureRect/ScrollContainer/BuyContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "$5000"

[node name="Button" type="Button" parent="TextureRect/TextureRect/ScrollContainer/BuyContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "구매"

[node name="TextureRect2" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 365.0
offset_top = 120.0
offset_right = 698.0
offset_bottom = 657.0
texture = ExtResource("2_26m0e")
expand_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect/TextureRect2"]
layout_mode = 0
offset_left = 43.0
offset_top = 63.0
offset_right = 289.0
offset_bottom = 480.0

[node name="SellContainer" type="VBoxContainer" parent="TextureRect/TextureRect2/ScrollContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 407.0
offset_top = 132.0
offset_right = 670.0
offset_bottom = 158.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Money : $1000"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_texture_button_pressed"]
